src/test/ui/const-generics/array-size-in-generic-struct-param.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/array-size-in-generic-struct-param.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

warning: the feature `lazy_normalization_consts` is incomplete and may cause the compiler to crash
  --> $DIR/array-size-in-generic-struct-param.rs:3:12
   |
LL | #![feature(lazy_normalization_consts)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^

error: constant expression depends on a generic parameter
  --> $DIR/array-size-in-generic-struct-param.rs:7:38
   |
LL | struct ArithArrayLen<const N: usize>([u32; 0 + N]);
   |                                      ^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: constant expression depends on a generic parameter
  --> $DIR/array-size-in-generic-struct-param.rs:16:5
   |
LL |     arr: [u8; CFG.arr_size],
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to 2 previous errors; 1 warning emitted

